Fix for width on ios

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -103,6 +103,7 @@ body {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='260' width='500'%3E%3ClinearGradient id='grad1' x1='0%25' y1='0%25' x2='0%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%2315CC57;stop-opacity:1' /%3E%3Cstop offset='100%25' style='stop-color:%2315826A;stop-opacity:1' /%3E%3C/linearGradient%3E%3ClinearGradient id='grad2' x1='100%25' y1='100%25' x2='0%25' y2='0%25'%3E%3Cstop offset='0%25' style='stop-color:%2315CC57;stop-opacity:1' /%3E%3Cstop offset='100%25' style='stop-color:%2315826A;stop-opacity:1' /%3E%3C/linearGradient%3E%3Cpolygon fill='url(%23grad1)' points='0,0 260,260 0,260' /%3E%3Cpolygon fill='url(%23grad2)' points='240,260 500,0 500,260' /%3E%3C/svg%3E");
 }
 
+.who-did-dis .top-heart, .who-did-dis .bottom-heart { width: 100%; }
 .who-did-dis .top-heart img, .who-did-dis .bottom-heart img {
     width: 100%; height: 100%;
 }
